# amcl_fast_mpc_realcar

./: README.md
devel/: .catkin  _setup_util.py
devel/include/mpc_tracking/: Bspline.h
devel/lib/lidar2world/: lidar2world_node
devel/lib/local_sensing_node/: pcl_render_node
devel/lib/mpc_tracking/: mpc_tracking_node
devel/lib/multi_map_server/: multi_map_visualization
devel/lib/odom_visualization/: odom_visualization
devel/lib/omni_control/: move2pose  pure_pursuit
devel/lib/omni_fake/: odom_path_node  omni_fake_node
devel/lib/omni_gmapping/: slam_gmapping  slam_gmapping_replay
devel/lib/omni_path_generator/: simple_path
devel/lib/omni_teleop/: teleop
devel/lib/pkgconfig/: amclWithMap_pkg.pc  amclwithmap_pkg.pc  bspline.pc  bspline_opt.pc  cmake_utils.pc  description_pkg.pc  lidar2world.pc  local_sensing_node.pc  map_generator.pc  mpc_tracking.pc  multi_map_server.pc  odom_visualization.pc  omni_control.pc  omni_fake.pc  omni_gazebo.pc  omni_gmapping.pc  omni_navigation.pc  omni_path_generator.pc  omni_teleop.pc  path_searching.pc  plan_env.pc  plan_manage.pc  poly_traj.pc  pose_utils.pc  quadrotor_msgs.pc  rviz_plugins.pc  so3_control.pc  so3_disturbance_generator.pc  so3_quadrotor_simulator.pc  traj_utils.pc  uav_utils.pc  velodyne_description.pc  (+2 more)
src/amclwithmap_pkg/: CMakeLists.txt  package.xml
src/amclwithmap_pkg/launch/: amcl_with_map.launch  launchAll.launch
src/amclwithmap_pkg/map/: my_map.pgm  my_map.yaml  my_map08202100.pgm  my_map08202100.yaml
src/description_pkg/: CMakeLists.txt
src/mpc_tracking/: CMakeLists.txt
(+104 files in other folders)
